--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -1,19 +1,24 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets">
-
-<h:head>
-	<title>HowHardCouldItBe</title>
-</h:head>
-<h:body>
-	<h3>Välkommen till HurSvårtKanDetVara.se sajten för alla
-		hemmafixare!</h3>
-	<ui:repeat var="category" value="#{categoryFacade.categories}">
+<body>
+	<ui:composition template="/resources/hhcib_template.xhtml">
+		
+		<ui:define name="top">
+			<h3>Välkommen till HurSvårtKanDetVara.se sajten för alla hemmafixare!</h3>
+		</ui:define>
+		
+		<ui:define name="left">
+			<ui:repeat var="category" value="#{categoryFacade.categories}">
 		#{category.name}<br />
-	</ui:repeat>
-</h:body>
+			</ui:repeat>
+		</ui:define>
+		
+		<ui:define name="content">
+             content
+        </ui:define>
+	</ui:composition>
+</body>
 </html>
