--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -7,7 +7,7 @@
 	<ui:composition template="/resources/hhcib_template.xhtml">
 		
 		<ui:define name="top">
-			<h3>Välkommen till HurSvårtKanDetVara.se sajten för alla hemmafixare!</h3>
+			<h3>Välkommen till HurSvårtKanDetVara.se - Sajten för alla hemmafixare!</h3>
 		</ui:define>
 		
 		<ui:define name="left">
