Added more css layout of left menu

--- a/src/main/webapp/resources/hhcib_template.xhtml
+++ b/src/main/webapp/resources/hhcib_template.xhtml
@@ -26,7 +26,7 @@ charset=UTF-8" />
 			<ui:insert name="left">
 			
 				<ul id="navigation">
-					<li><a
+					<li id="home"><a
 						href="${facesContext.externalContext.requestContextPath}">Hem</a></li>
 					<li><a
 						href="${facesContext.externalContext.requestContextPath}/categories/house_and_garden.xhtml">Hus och trädgård</a></li>
