Added test classes and updated pom.xml accordingly

--- a/src/main/webapp/resources/hhcib_template.xhtml
+++ b/src/main/webapp/resources/hhcib_template.xhtml
@@ -31,12 +31,7 @@ charset=UTF-8" />
 					<li><a
 						href="${facesContext.externalContext.requestContextPath}/categories/house_and_garden.xhtml">Hus och trädgård</a></li>
 						
-					<li><a
-						href="${facesContext.externalContext.requestContextPath}/categories/food.xhtml">Matlagning</a></li>
-						
-<!-- 					<UI:REPEAT VAR="CATEGORY" VALUE="#{CATEGORYFACADE.CATEGORIES}"> -->
-<!-- 						<LI>#{CATEGORY.NAME}</LI> -->
-<!-- 					</ui:repeat> -->
+					<li><a href="${facesContext.externalContext.requestContextPath}/categories/food.xhtml">Matlagning</a></li>
 					<li><a
 						href="${facesContext.externalContext.requestContextPath}/categories/economy.xhtml">Ekonomi</a></li>
 				</ul>
