Added dependency on PrimeFaces

--- a/src/main/webapp/resources/hhcib_template.xhtml
+++ b/src/main/webapp/resources/hhcib_template.xhtml
@@ -34,6 +34,10 @@ charset=UTF-8" />
 					<li><a href="${facesContext.externalContext.requestContextPath}/categories/food.xhtml">Matlagning</a></li>
 					<li><a
 						href="${facesContext.externalContext.requestContextPath}/categories/economy.xhtml">Ekonomi</a></li>
+						
+					<li><a
+						href="${facesContext.externalContext.requestContextPath}/categories/new_how_to.xhtml">Nytt...</a></li>
+						
 				</ul>
 			</ui:insert>
 
