--- a/src/main/webapp/resources/hhcib_template.xhtml
+++ b/src/main/webapp/resources/hhcib_template.xhtml
@@ -11,6 +11,10 @@ charset=UTF-8" />
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib.css"
 		rel="stylesheet" type="text/css" />
 	<title>HowHardCouldItBe</title>
+	<script src="http://js.nicedit.com/nicEdit-latest.js"
+		type="text/javascript"></script>
+	<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+		
 </h:head>
 <h:body>
 	<div id="container">
