--- a/src/main/webapp/resources/hhcib_template.xhtml
+++ b/src/main/webapp/resources/hhcib_template.xhtml
@@ -14,10 +14,28 @@ charset=UTF-8" />
 		rel="stylesheet" type="text/css" />
 	<title>HowHardCouldItBe</title>
 
-	<script src="http://js.nicedit.com/nicEdit-latest.js"
-		type="text/javascript"></script>
-	<script type="text/javascript">bkLib.onDomLoaded(nicEditors.allTextAreas);</script>
+	<!-- load the jQuery and require.js libraries -->
+	<script type="text/javascript"
+		src="http://cdn.aloha-editor.org/latest/lib/require.js"></script>
+	<script type="text/javascript"
+		src="http://cdn.aloha-editor.org/latest/lib/vendor/jquery-1.7.2.js"></script>
 
+	<!-- load the Aloha Editor core and some plugins -->
+	<script src="http://cdn.aloha-editor.org/latest/lib/aloha.js"
+		data-aloha-plugins="common/ui, common/format, common/list, common/link, common/highlighteditables, common/image">
+     </script>
+
+	<!-- load the Aloha Editor CSS styles -->
+	<link href="http://cdn.aloha-editor.org/latest/css/aloha.css"
+		rel="stylesheet" type="text/css" />
+	
+	<!-- make all elements with class="editable" editable with Aloha Editor -->
+	<script type="text/javascript">
+                     Aloha.ready( function() {
+                            var $ = Aloha.jQuery;
+                            $('.editable').aloha();
+                     });
+    </script>
 </h:head>
 
 <h:body>
