--- a/src/main/webapp/subject/show_subjects.xhtml
+++ b/src/main/webapp/subject/show_subjects.xhtml
@@ -1,11 +1,16 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
+	
+	<a href="
+	${facesContext.externalContext.requestContextPath}/subject/new_subject_description.xhtml?category=#{category}">Ny beskrivning</a>
+	
 	<ui:repeat var="subject"
 		value="#{subjectFacade.getSubjectsFor(category)}">
+
 		<div id="subjectDescription">
 			<h:outputText value="#{subject.description}" escape="false" />
 		</div>
-
 	</ui:repeat>
 </ui:composition>
