--- a/src/main/webapp/subject/show_subject.xhtml
+++ b/src/main/webapp/subject/show_subject.xhtml
@@ -24,13 +24,13 @@
 						value="#{showSubjectFacade.subject.rating}">
 					</pf:rating>
 
-					<div id="subjectDescription">
+					<div id="subject-description">
 						<h:outputText value="#{showSubjectFacade.subject.description}"
 							escape="false" />
 					</div>
 					<div id="social-share">
 						<pf:socialShare layout="1" url="http://www.liu.se"
-							text="nike" showGooglePlus="true"
+							text="nike" showGooglePlus="false"
 							showFacebook="true" showTwitter="true" />
 					</div>
 				</h:form>
