--- a/src/main/webapp/subject/update_subject.xhtml
+++ b/src/main/webapp/subject/update_subject.xhtml
@@ -10,6 +10,7 @@
 	<f:view encoding="UTF-8">
 		<ui:composition template="/hhcib_template.xhtml">
 			<ui:define name="content">
+
 				<f:metadata>
 					<f:viewParam id="subjectId"
 						value="#{updateSubjectFacade.subjectId}" name="subjectId"
@@ -18,6 +19,7 @@
 						name="category" required="true" />
 					<f:viewAction action="#{updateSubjectFacade.fetchSubject}" />
 				</f:metadata>
+
 				<h:form>
 					<pf:rating totalStars="5" step="1"
 						value="#{updateSubjectFacade.rating}">
@@ -27,11 +29,12 @@
 					<h:inputTextarea value="#{updateSubjectFacade.subject.description}"
 						id="update_subject_description" cols="135" rows="25"
 						p:class="editable" />
-					<h:commandButton value="Ändra" p:class="button"
-						action="#{updateSubjectFacade.update()}" />
-					<h:message showSummary="true" showDetail="false"
-						style="color: red;" p:id="newSubjectError"
-						for="new_subject_description" />
+					<span id="update-subject-button"> <h:commandButton
+							value="Ändra" p:class="button"
+							action="#{updateSubjectFacade.update()}" /> <h:message
+							showSummary="true" showDetail="false" style="color: red;"
+							p:id="update_subject_description" for="update_subject_description" />
+					</span>
 				</h:form>
 			</ui:define>
 		</ui:composition>
