Added better message handlign when updating/creating new subjects

--- a/src/main/webapp/subject/new_subject_description.xhtml
+++ b/src/main/webapp/subject/new_subject_description.xhtml
@@ -22,9 +22,7 @@
 						action="#{newSubjectFacade.save()}" />
 					<h:commandButton value="Rensa" p:class="button"
 						action="#{newSubjectFacade.clear()}" />
-					<h:message
-							showSummary="true" showDetail="false" style="color: red;"
-							p:id="new_subject_description" for="new_subject_description" />
+					<h:messages errorStyle="color:red;" />
 				</h:form>
 			</ui:define>
 		</ui:composition>
