Added printer friendly page/CSS

--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -12,6 +12,9 @@ charset=UTF-8" />
 	<link
 		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib.css"
 		rel="stylesheet" type="text/css" />
+	<link
+		href="${facesContext.externalContext.requestContextPath}/resources/css/hhcib_print.css"
+		rel="stylesheet" type="text/css" media="print"/>
 	<title>HowHardCouldItBe</title>
 
 	<!-- load the jQuery and require.js libraries -->
