--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,11 +1,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
-<body>
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:h="http://xmlns.jcp.org/jsf/html">
+
+<h:body>
 	<ui:composition template="/hhcib_template.xhtml">
 
 		<ui:define name="content">
-             index.html content
+			<h:outputScript library="javascript" name="jquery-2.0.3.min.js" target="head"/>
+				
+Välkommen till HurSvårtKanDeVa.se - sajten för alla hemmafixare och proffs! Här kan du...
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
+		labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+		aliquip ex ea commodo consequat. 
         </ui:define>
 	</ui:composition>
-</body>
+</h:body>
 </html>
