--- a/src/main/webapp/subject/new_subject_description.xhtml
+++ b/src/main/webapp/subject/new_subject_description.xhtml
@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:jsf="http://xmlns.jcp.org/jsf"
@@ -14,6 +14,9 @@
 					<f:viewParam id="category" name="category"
 						value="#{newSubjectFacade.category}" required="true" />
 				</f:metadata>
+				
+				
+			
 				<h:form id="form">
 					<h:inputTextarea value="#{newSubjectFacade.description}"
 						id="new_subject_description" 
