Added support for sliders (using Jquery and unoSlider)

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,13 +6,33 @@
 	<ui:composition template="/hhcib_template.xhtml">
 
 		<ui:define name="content">
-			<h:outputScript library="javascript" name="jquery-2.0.3.min.js" target="head"/>
+			<h:outputScript library="javascript" name="slider.js" target="head" />
 				
 Välkommen till HurSvårtKanDeVa.se - sajten för alla hemmafixare och proffs! Här kan du...
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
 		labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-		aliquip ex ea commodo consequat. 
-        </ui:define>
+		aliquip ex ea commodo consequat.
+		
+		<div id="subject-slider">
+				<ul>
+					<li class="current">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+		aliquip ex ea commodo consequat.Välkommen till HurSvårtKanDeVa.se - sajten för alla hemmafixare och proffs! Här kan du...
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
+		labore et dolore magna aliqua.</li>
+					<li>HUr svårt kan det vara att bygga en sajt som denna?</li>
+					<li>Välkommen till HurSvårtKanDeVa.se - sajten för alla hemmafixare och proffs! Här kan du...
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
+		labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+		aliquip ex ea commodo consequat.Välkommen till HurSvårtKanDeVa.se - sajten för alla hemmafixare och proffs! Här kan du...
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
+		labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+		aliquip ex ea commodo consequat.Välkommen till HurSvårtKanDeVa.se - sajten för alla hemmafixare och proffs! Här kan du...
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
+		labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+		aliquip ex ea commodo consequat.</li>
+				</ul>
+			</div>
+		</ui:define>
 	</ui:composition>
 </h:body>
 </html>
