--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -22,7 +22,7 @@ Välkommen till HurSvårtKanDeVa.se - sajten för alla hemmafixare och proffs! H
 						hemmafixare och proffs! Här kan du... Lorem ipsum dolor sit amet,
 						consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
 						labore et dolore magna aliqua.</li>
-					<li>HUr svårt kan det vara att bygga en sajt som denna?</li>
+					<li>Hur svårt kan det vara att bygga en sajt som denna? Inte alls svårt med JavaEE7....</li>
 					<li>Välkommen till HurSvårtKanDeVa.se - sajten för alla
 						hemmafixare och proffs! Här kan du... Lorem ipsum dolor sit amet,
 						consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
