--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -56,17 +56,8 @@ charset=UTF-8" />
 
 		<div id="left">
 			<ui:insert name="left">
-				<ul id="navigation">
-					<li id="home"><a
-						href="${facesContext.externalContext.requestContextPath}">Hem</a></li>
-					<li><a
-						href="${facesContext.externalContext.requestContextPath}/categories/house_and_garden.xhtml">Hus
-							och trädgård</a></li>
-					<li><a
-						href="${facesContext.externalContext.requestContextPath}/categories/food.xhtml">Matlagning</a></li>
-					<li><a
-						href="${facesContext.externalContext.requestContextPath}/categories/economy.xhtml">Ekonomi</a></li>
-				</ul>
+				<ui:decorate template="menu_template.xhtml">
+				</ui:decorate>
 			</ui:insert>
 		</div>
 
@@ -75,6 +66,6 @@ charset=UTF-8" />
 		</div>
 	</div>
 
-	
+
 </h:body>
 </html>
