Added more login fetures, now possible to reset password. Also changed name space from sun.com to jcp.org

--- a/src/main/webapp/hhcib_template.xhtml
+++ b/src/main/webapp/hhcib_template.xhtml
@@ -35,7 +35,8 @@ charset=UTF-8" />
 	<script
 		src="${facesContext.externalContext.requestContextPath}/resources/javascript/menu.js"></script>
 
-	<script type="text/javascript" src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce.js">
+	<script type="text/javascript"
+		src="${facesContext.externalContext.requestContextPath}/resources/javascript/tinymce.js">
 	</script>
 
 </h:head>
