--- a/src/main/webapp/menu_template.xhtml
+++ b/src/main/webapp/menu_template.xhtml
@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <body>
 	<ui:composition>
 
@@ -37,7 +37,7 @@
 									2</span></a></li>
 					</ul>
 				</li>
-				<li><a href="login.xhtml"><span>Mina Sidor</span></a></li>
+				<li><a href="${facesContext.externalContext.requestContextPath}/login.xhtml"><span>Mina Sidor</span></a></li>
 				<li class='last'><a href='#'><span>Kontakta oss</span></a></li>
 			</ul>
 		</div>
