--- a/src/main/webapp/subject/new_subject_description.xhtml
+++ b/src/main/webapp/subject/new_subject_description.xhtml
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:jsf="http://xmlns.jcp.org/jsf"
 	xmlns:p="http://xmlns.jcp.org/jsf/passthrough">
 
@@ -14,13 +14,11 @@
 					<f:viewParam id="category" name="category"
 						value="#{newSubjectFacade.category}" required="true" />
 				</f:metadata>
-				
-				
-			
+
 				<h:form id="form">
 					<h:inputTextarea value="#{newSubjectFacade.description}"
-						id="new_subject_description" 
-						p:class="editable" p:id="subject-description-input"/>
+						id="new_subject_description" p:class="editable"
+						p:id="subject-description-input" />
 					<h:commandButton value="Spara" p:class="button"
 						action="#{newSubjectFacade.save()}" />
 					<h:commandButton value="Rensa" p:class="button"
