--- a/src/main/webapp/menu_template.xhtml
+++ b/src/main/webapp/menu_template.xhtml
@@ -37,7 +37,7 @@
 									2</span></a></li>
 					</ul>
 				</li>
-				<li><a href="${facesContext.externalContext.requestContextPath}/login.xhtml"><span>Mina Sidor</span></a></li>
+				<li><a href="${facesContext.externalContext.requestContextPath}/secured/my_pages.xhtml"><span>Mina Sidor</span></a></li>
 				<li class='last'><a href='#'><span>Kontakta oss</span></a></li>
 			</ul>
 		</div>
