--- a/src/main/webapp/subject/show_subject.xhtml
+++ b/src/main/webapp/subject/show_subject.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:jsf="http://xmlns.jcp.org/jsf"
 	xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
@@ -16,7 +16,7 @@
 						name="subjectId" required="true" />
 					<f:viewParam id="category" value="#{showSubjectFacade.category}"
 						name="category" required="true" />
-					<f:viewAction action="#{showSubjectFacade.fetchSubject}" />
+					<f:viewAction action="#{showSubjectFacade.fetchSubject()}" />
 				</f:metadata>
 				
 				<h:form>
