--- a/src/main/webapp/subject/update_subject.xhtml
+++ b/src/main/webapp/subject/update_subject.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:jsf="http://xmlns.jcp.org/jsf"
 	xmlns:p="http://xmlns.jcp.org/jsf/passthrough"
@@ -12,9 +12,8 @@
 			<ui:define name="content">
 
 				<f:metadata>
-					<f:viewParam id="subjectId"
-						value="#{updateSubjectFacade.subjectId}" name="subjectId"
-						required="true" />
+					<f:viewParam id="subjectId" value="#{updateSubjectFacade.subjectId}"
+						name="subjectId" required="true" />
 					<f:viewParam id="category" value="#{updateSubjectFacade.category}"
 						name="category" required="true" />
 					<f:viewAction action="#{updateSubjectFacade.fetchSubject}" />
